Tools/DataModelConsole/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: console
  labels:
    app.kubernetes.io/part-of: data-model-console
